<resources>
    <string name="app_name">Object detection</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="button">Button</string>
    <string name="upload_image">Upload Image</string>
    <string name="todo">TODO</string>
    <string name="select_image">Select image</string>
    <string name="label">Label</string>
    <string name="confidence">Confidence</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
</resources>
